# tpch-analytics

./: .gitignore  Makefile  README.md  docker-compose.yml  register_trino_tables.sh  spark-optimization-recommendations.md  spark-optimization.md
notebooks/: dev_test.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: dev_test-checkpoint.ipynb
postgres/: init.sql  load-tpch.sh
spark/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  start-jupyter.sh
spark/conf/: spark-defaults.conf
tpch-project/etl/utils/: database.py
tpch_etl_pipeline/: run_pipeline.py  test_layers.py
tpch_etl_pipeline/config/: tables_config.py  trino_tables_config.py
tpch_etl_pipeline/etl/bronze/: customer.py  lineitem.py  nation.py  orders.py  part.py  partsupp.py  region.py  supplier.py
tpch_etl_pipeline/etl/gold/: daily_sales_metrics.py  finance_metrics.py  sales_metrics.py  supply_chain_metrics.py  wide_order_details.py
tpch_etl_pipeline/etl/interface/: README.md  daily_sales_report.py  initialize_views.py
tpch_etl_pipeline/etl/interface/finance/: __init__.py  finance_dashboard.py
tpch_etl_pipeline/etl/interface/sales/: sales_dashboard.py
tpch_etl_pipeline/etl/interface/supply_chain/: supply_chain_dashboard.py
tpch_etl_pipeline/etl/silver/: dim_customer.py  dim_part.py  fct_orders.py
tpch_etl_pipeline/gx/: great_expectations.yml
tpch_etl_pipeline/gx/checkpoints/: temp_checkpoint.yml
tpch_etl_pipeline/gx/expectations/: .ge_store_backend_id  customer.json  lineitem.json  nation.json  orders.json  part.json  partsupp.json  region.json  supplier.json
tpch_etl_pipeline/tests/: README.md  conftest.py
tpch_etl_pipeline/tests/integration/: test_bronze_to_silver.py  test_end_to_end.py
tpch_etl_pipeline/tests/unit/bronze/: test_customer.py
tpch_etl_pipeline/tests/unit/gold/: test_daily_sales_metrics.py
tpch_etl_pipeline/tests/unit/silver/: test_dim_customer.py
tpch_etl_pipeline/tests/unit/utils/: test_etl_base.py
tpch_etl_pipeline/utils/: __init__.py  database.py  etl_base.py
tpchproject/: test_layers.py
tpchproject/etl/bronze/: customer.py  lineitem.py  nation.py  part.py  partsupp.py  region.py  supplier.py
tpchproject/etl/gold/: daily_sales_metrics.py  wide_order_details.py
tpchproject/etl/silver/: dim_customer.py  dim_part.py  fct_orders.py
tpchproject/etl/utils/: base_table.py
tpchproject/utils/: __init__.py  base_table.py  database.py
trino/: entrypoint.sed.sh  entrypoint.sh
trino/catalog/: delta.properties  delta.properties.template
